atomic -> read write lock in memory + doc